Money Manager 24.7.1
* Dependencies
* Maven wrapper