@@ -17,23 +17,83 @@
     <packaging>jar</packaging>
     <name>Desktop</name>
 
+    <profiles>
+        <profile>
+            <id>win</id>
+            <activation>
+                <os>
+                    <family>windows</family>
+                </os>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.panteleyev</groupId>
+                        <artifactId>jpackage-maven-plugin</artifactId>
+
+                        <configuration>
+                            <icon>icons/icon.ico</icon>
+                            <winMenu>true</winMenu>
+                            <winDirChooser>true</winDirChooser>
+                            <winUpgradeUuid>38dac4b6-91d2-4ca8-aacb-2e0cfd54127a</winUpgradeUuid>
+                            <winMenuGroup>panteleyev.org</winMenuGroup>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>mac</id>
+            <activation>
+                <os>
+                    <family>mac</family>
+                </os>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.panteleyev</groupId>
+                        <artifactId>jpackage-maven-plugin</artifactId>
+
+                        <configuration>
+                            <icon>icons/icon.icns</icon>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>linux</id>
+            <activation>
+                <os>
+                    <name>linux</name>
+                </os>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.panteleyev</groupId>
+                        <artifactId>jpackage-maven-plugin</artifactId>
+
+                        <configuration>
+                            <type>APP_IMAGE</type>
+                            <icon>icons/icon48.png</icon>
+                            <javaOptions>
+                                <option>-Dsun.java2d.opengl=true</option>
+                            </javaOptions>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+
     <properties>
         <appModule>org.panteleyev.money</appModule>
         <appMainClass>org.panteleyev.money.MoneyApplication</appMainClass>
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>org.apache.poi</groupId>
-            <artifactId>poi</artifactId>
-            <version>5.2.5</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.poi</groupId>
-            <artifactId>poi-ooxml</artifactId>
-            <version>5.2.5</version>
-        </dependency>
-
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>money-manager-model</artifactId>
@@ -107,6 +167,14 @@
             <groupId>org.liquibase</groupId>
             <artifactId>liquibase-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+        </dependency>
         <!-- Test -->
         <dependency>
             <groupId>org.openjfx</groupId>
@@ -167,7 +235,6 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <argLine>
-                        --enable-preview
                         --add-opens javafx.graphics/javafx.scene=org.controlsfx.controls
                         --add-exports javafx.base/com.sun.javafx.event=org.controlsfx.controls
                         --add-exports javafx.base/com.sun.javafx.logging=ALL-UNNAMED
@@ -195,31 +262,6 @@
                         <option>javafx.base/com.sun.javafx.event=org.controlsfx.controls</option>
                     </javaOptions>
                 </configuration>
-                <executions>
-                    <execution>
-                        <id>mac</id>
-                        <configuration>
-                            <icon>icons/icons.icns</icon>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>linux</id>
-                        <configuration>
-                            <type>APP_IMAGE</type>
-                            <icon>icons/icon48.png</icon>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>win</id>
-                        <configuration>
-                            <icon>icons/icons.ico</icon>
-                            <winMenu>true</winMenu>
-                            <winDirChooser>true</winDirChooser>
-                            <winUpgradeUuid>38dac4b6-91d2-4ca8-aacb-2e0cfd54127a</winUpgradeUuid>
-                            <winMenuGroup>panteleyev.org</winMenuGroup>
-                        </configuration>
-                    </execution>
-                </executions>
             </plugin>
             <plugin>
                 <groupId>org.openjfx</groupId>
